objects/Bundle_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Letters__c</fullName>
        <formula>Station__r.Call_Letters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Letters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edited_Days__c</fullName>
        <description>Used to shorten the &quot;Days&quot; field output on the Excel Conga Bundle Paperwork. Can&apos;t edit original Days field because of use in XML button on the deal.</description>
        <formula>if(INCLUDES(Days__c,&quot;Monday&quot;),&quot;M&quot;,&quot;-&quot;)&amp;
if(INCLUDES(Days__c,&quot;Tuesday&quot;),&quot;T&quot;,&quot;-&quot;)&amp;
if(INCLUDES(Days__c,&quot;Wednesday&quot;),&quot;W&quot;,&quot;-&quot;)&amp;
if(INCLUDES(Days__c,&quot;Thursday&quot;),&quot;T&quot;,&quot;-&quot;)&amp;
if(INCLUDES(Days__c,&quot;Friday&quot;),&quot;F&quot;,&quot;-&quot;)&amp;
if(INCLUDES(Days__c,&quot;Saturday&quot;),&quot;S&quot;,&quot;-&quot;)&amp;
if(INCLUDES(Days__c,&quot;Sunday&quot;),&quot;S&quot;,&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edited Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01:00A</fullName>
                </value>
                <value>
                    <fullName>01:30A</fullName>
                </value>
                <value>
                    <fullName>02:00A</fullName>
                </value>
                <value>
                    <fullName>02:30A</fullName>
                </value>
                <value>
                    <fullName>03:00A</fullName>
                </value>
                <value>
                    <fullName>03:30A</fullName>
                </value>
                <value>
                    <fullName>04:00A</fullName>
                </value>
                <value>
                    <fullName>04:30A</fullName>
                </value>
                <value>
                    <fullName>05:00A</fullName>
                </value>
                <value>
                    <fullName>05:30A</fullName>
                </value>
                <value>
                    <fullName>06:00A</fullName>
                </value>
                <value>
                    <fullName>06:30A</fullName>
                </value>
                <value>
                    <fullName>07:00A</fullName>
                </value>
                <value>
                    <fullName>07:30A</fullName>
                </value>
                <value>
                    <fullName>08:00A</fullName>
                </value>
                <value>
                    <fullName>08:30A</fullName>
                </value>
                <value>
                    <fullName>09:00A</fullName>
                </value>
                <value>
                    <fullName>09:30A</fullName>
                </value>
                <value>
                    <fullName>10:00A</fullName>
                </value>
                <value>
                    <fullName>10:30A</fullName>
                </value>
                <value>
                    <fullName>11:00A</fullName>
                </value>
                <value>
                    <fullName>11:30A</fullName>
                </value>
                <value>
                    <fullName>12:00P</fullName>
                </value>
                <value>
                    <fullName>12:30P</fullName>
                </value>
                <value>
                    <fullName>01:00P</fullName>
                </value>
                <value>
                    <fullName>01:30P</fullName>
                </value>
                <value>
                    <fullName>02:00P</fullName>
                </value>
                <value>
                    <fullName>02:30P</fullName>
                </value>
                <value>
                    <fullName>03:00P</fullName>
                </value>
                <value>
                    <fullName>03:30P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group 1</fullName>
                </value>
                <value>
                    <fullName>Group 2</fullName>
                </value>
                <value>
                    <fullName>Group 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Station__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipName>Bundle_Daypart_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_per_30__c</fullName>
        <label>Rate per 30</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raycom_Bundle__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Raycom Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_End_Time__c</fullName>
        <formula>text(Start_Time__c )&amp;&quot;-&quot;&amp;text( End_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01:00A</fullName>
                </value>
                <value>
                    <fullName>01:30A</fullName>
                </value>
                <value>
                    <fullName>02:00A</fullName>
                </value>
                <value>
                    <fullName>02:30A</fullName>
                </value>
                <value>
                    <fullName>03:00A</fullName>
                </value>
                <value>
                    <fullName>03:30A</fullName>
                </value>
                <value>
                    <fullName>04:00A</fullName>
                </value>
                <value>
                    <fullName>04:30A</fullName>
                </value>
                <value>
                    <fullName>05:00A</fullName>
                </value>
                <value>
                    <fullName>05:30A</fullName>
                </value>
                <value>
                    <fullName>06:00A</fullName>
                </value>
                <value>
                    <fullName>06:30A</fullName>
                </value>
                <value>
                    <fullName>07:00A</fullName>
                </value>
                <value>
                    <fullName>07:30A</fullName>
                </value>
                <value>
                    <fullName>08:00A</fullName>
                </value>
                <value>
                    <fullName>08:30A</fullName>
                </value>
                <value>
                    <fullName>09:00A</fullName>
                </value>
                <value>
                    <fullName>09:30A</fullName>
                </value>
                <value>
                    <fullName>10:00A</fullName>
                </value>
                <value>
                    <fullName>10:30A</fullName>
                </value>
                <value>
                    <fullName>11:00A</fullName>
                </value>
                <value>
                    <fullName>11:30A</fullName>
                </value>
                <value>
                    <fullName>12:00P</fullName>
                </value>
                <value>
                    <fullName>12:30P</fullName>
                </value>
                <value>
                    <fullName>01:00P</fullName>
                </value>
                <value>
                    <fullName>01:30P</fullName>
                </value>
                <value>
                    <fullName>02:00P</fullName>
                </value>
                <value>
                    <fullName>02:30P</fullName>
                </value>
                <value>
                    <fullName>03:00P</fullName>
                </value>
                <value>
                    <fullName>03:30P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Station</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>Bundle Pricing</relationshipLabel>
        <relationshipName>Bundle_Daypart_Pricing</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stationn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stationn</label>
        <referenceTo>Stationn__c</referenceTo>
        <relationshipLabel>Bundle Pricing</relationshipLabel>
        <relationshipName>Bundle_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Rate_per_30__c  *  Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bundle Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Station__c</columns>
        <columns>Call_Letters__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Market__c</columns>
        <columns>Rate_per_30__c</columns>
        <columns>Units__c</columns>
        <columns>Total__c</columns>
        <columns>Days__c</columns>
        <columns>Edited_Days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BDP-{000}</displayFormat>
        <label>Bundle Daypart Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>